<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_players"
        android:icon="@drawable/icons8"
        android:title="@string/title_players" />

    <item
        android:id="@+id/navigation_Profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />

    <item
    android:id="@+id/navigation_dashboard"
    android:icon="@drawable/report_icon"
    android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_dataset"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/dataset_entry" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
