<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/existPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/current_password"
        android:inputType="textPassword">
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/existPasswordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:drawableLeft="@drawable/new_password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/newPasswordConfirmEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPasswordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:drawableLeft="@drawable/confirm_password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

</RelativeLayout>