<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <RelativeLayout
        android:id="@+id/afterAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/WelcomeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome Back"
            android:textColor="@color/blackColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quoateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeTV"
            android:layout_marginTop="10dp"
            android:text="Everyone can be a HERO"
            android:textColor="@color/redColor"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/loginBtn"
            android:layout_below="@+id/quoateTV"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/blackColor"
                android:textColorHint="@color/blackColor"
                android:textSize="15sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/blackColor"
                android:textColorHint="@color/blackColor"
                android:textSize="15sp"
                android:autofillHints="" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <CheckBox
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_password"
                    android:textColor="@color/blackColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/forget_password"
                    android:textColor="@color/blackColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/registerBtn"
            android:layout_marginBottom="5dp"
            android:background="@color/redColor"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/blackColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/create_an_account_regiester"
            android:textColor="@color/blackColor"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>